<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_course_screen_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.unifor.sextaapp.activities.NewCourseScreen">

    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/new_course_screen_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textViewName"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextName"
            android:layout_below="@+id/textViewName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/new_course_screen_working_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextName"
            android:layout_alignParentStart="true"
            android:id="@+id/textViewWorkingPlan"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextWorkingPlan"
            android:layout_below="@+id/textViewWorkingPlan"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/new_course_screen_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextWorkingPlan"
            android:layout_alignParentStart="true"
            android:id="@+id/textViewCourseHours" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/textViewCourseHours"
            android:layout_alignParentStart="true"
            android:id="@+id/editTextCourseHours"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/new_course_screen_work_shift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextCourseHours"
            android:layout_alignParentStart="true"
            android:id="@+id/textViewWorkingShift"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/textViewWorkingShift"
            android:layout_alignParentStart="true"
            android:id="@+id/editTextWorkingShift"
            android:layout_alignParentEnd="true" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:orientation="horizontal"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/new_course_screen_button_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonNewCourseInsert"
            android:layout_weight="1" />

        <Button
            android:text="@string/new_course_screen_button_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonNewCourseClean"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
